hphp/test/slow/parser/hh-namespace-conflict-5.php.expectf
Fatal error: Cannot use `string` as a type name as it is reserved in %s on line 3
